--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,12 @@ base {
 }
 
 repositories {
-	maven { url 'https://jitpack.io' }
+	maven {
+		url 'https://jitpack.io' }
+	maven {
+		name = "Ladysnake Mods"
+		url = "https://maven.ladysnake.org/releases"
+	}
 }
 
 fabricApi {
@@ -29,6 +34,12 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation("net.fabricmc.fabric-api:fabric-rendering-v1:${project.fabric_version}")
+	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+
+	include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+	include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+
 }
 
 processResources {
