--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.16.10
 loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=v0.1.6
+mod_version=v0.1.7g
 maven_group=net.capozi.menagerie
 archives_base_name=menagerie
 
