--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,14 @@ base {
 }
 
 repositories {
-	maven {
-		url 'https://jitpack.io' }
-	maven {
-		name = "Ladysnake Mods"
-		url = "https://maven.ladysnake.org/releases"
-	}
+	maven {url = 'https://jitpack.io' }
+    maven {url = 'https://maven.blamejared.com/' }
+    maven {url = "https://mvn.devos.one/releases/" }
+    maven {url = "https://api.modrinth.com/maven" }
+    maven {url = "https://maven.theillusivec4.top/"}
+    maven {url = "https://maven.jamieswhiteshirt.com/libs-release"}
+    maven {url = 'https://maven.ladysnake.org/releases'}
+    maven {url = "https://maven.terraformersmc.com/"}
 }
 
 fabricApi {
@@ -32,13 +34,23 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
+    modImplementation("team.lodestar.lodestone:lodestone:${project.minecraft_version}-${project.lodestone_version}-fabric")
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation("net.fabricmc.fabric-api:fabric-rendering-v1:${project.fabric_version}")
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+    modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}")
+
+    modImplementation("dev.emi:trinkets:${project.trinkets_version}")
+    for (String module in port_lib_modules.split(",")) {
+        modImplementation("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version")
+    }
+    modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
 
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+    include("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}")
+
 }
 
 processResources {
