--- a/gradle.properties
+++ b/gradle.properties
@@ -10,26 +10,10 @@ loader_version=0.16.10
 loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=v0.2.1f
+mod_version=v0.2.2a
 maven_group=net.capozi.menagerie
 archives_base_name=menagerie
 
 # Dependencies
 fabric_version=0.91.1+1.20.1
-lodestone_version=1.6.2.3f
-rea_version=2.4.0
-trinkets_version=3.4.1
 cca_version=5.2.3
-port_lib_version = 2.3.4+1.20.1
-port_lib_modules = \
-  accessors,\
-  base,\
-  blocks,\
-  core,\
-  data,\
-  extensions,\
-  lazy_registration,\
-  model_generators,\
-  models,\
-  networking,\
-  tool_actions
