--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,11 @@ dependencies {
 	modImplementation("net.fabricmc.fabric-api:fabric-rendering-v1:${project.fabric_version}")
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-item:${project.cca_version}")
 
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
+	include("dev.onyxstudios.cardinal-components-api:cardinal-components-item:${project.cca_version}")
 
 }
 
