deliver me and carry me away

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,21 @@ maven_group=net.capozi.menagerie
 archives_base_name=menagerie
 
 # Dependencies
+lodestone_version=1.6.2.3f
 fabric_version=0.91.1+1.20.1
 cca_version=5.2.3
+trinkets_version=3.7.1
+rea_version=2.4.0
+port_lib_version = 2.3.4+1.20.1
+port_lib_modules = \
+  accessors,\
+  base,\
+  blocks,\
+  core,\
+  data,\
+  extensions,\
+  lazy_registration,\
+  model_generators,\
+  models,\
+  networking,\
+  tool_actions
