--- a/build.gradle
+++ b/build.gradle
@@ -39,10 +39,16 @@ dependencies {
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-item:${project.cca_version}")
+    modImplementation("team.lodestar.lodestone:lodestone:${project.minecraft_version}-${project.lodestone_version}-fabric")
 
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-item:${project.cca_version}")
+    modImplementation("dev.emi:trinkets:${project.trinkets_version}")
+    for (String module in port_lib_modules.split(",")) {
+        modImplementation("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version")
+    }
+    modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
 
 }
 
