--- a/build.gradle
+++ b/build.gradle
@@ -41,14 +41,18 @@ dependencies {
 	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-item:${project.cca_version}")
     modImplementation("team.lodestar.lodestone:lodestone:${project.minecraft_version}-${project.lodestone_version}-fabric")
 
+
+    include("team.lodestar.lodestone:lodestone:${project.minecraft_version}-${project.lodestone_version}-fabric")
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}")
 	include("dev.onyxstudios.cardinal-components-api:cardinal-components-item:${project.cca_version}")
     modImplementation("dev.emi:trinkets:${project.trinkets_version}")
     for (String module in port_lib_modules.split(",")) {
         modImplementation("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version")
+        include("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version")
     }
     modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
+    include("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
 
 }
 
