gos gives me these ideas but i cannot bend the will of purposefully difficult code

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.16.10
 loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=v0.4.2d
+mod_version=v0.4.2e
 maven_group=net.capozi.menagerie
 archives_base_name=menagerie
 
