--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,9 @@ jar {
 		rename { "${it}_${inputs.properties.archivesName}"}
 	}
 }
-
+loom {
+    accessWidenerPath = file("src/main/resources/menagerie.accesswidener")
+}
 // configure the maven publication
 publishing {
 	publications {
