--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
-loader_version=0.17.3
-loom_version=1.12.7
+loader_version=0.17.2
+loom_version=1.10-SNAPSHOT
 
 # Mod Properties
 mod_version=v0.5.1a
